--- a/components/base.scss
+++ b/components/base.scss
@@ -4,8 +4,8 @@
 @import 'animations';
 
 body {
-  background: $black;
-  color: $white;
+  background: $white;
+  color: $black;
   -webkit-font-smoothing: subpixel-antialiased;
   font: 16px/20px $base-font-family;
   padding: 4em 10vw;
