--- a/components/vars.scss
+++ b/components/vars.scss
@@ -3,7 +3,7 @@ $grey90: #161616;
 $grey80: #262626;
 $grey70: #424242;
 $grey50: #808080;
-$white: #FFFFFF;
+$white: #FFF3B6;
 
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 $base-font-family: 'Inconsolata', monospace;
