--- a/components/base.scss
+++ b/components/base.scss
@@ -8,7 +8,7 @@ body {
   color: $black;
   -webkit-font-smoothing: subpixel-antialiased;
   font: 16px/20px $base-font-family;
-  padding: 4em 10vw;
+  padding: 0;
   font-weight: 400;
 
   display: flex;
